# simapy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  generate.py  publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py
.github/workflows/: publish.yml  testing.yml
.uv/: config.toml
output/: README.md
src/marmo/: package_info.py
src/marmo/containers/: __init__.py  attribute.py  booleanarray.py  container.py  dimensionalmatrix.py  dimensionalscalar.py  equallyspacedsignal.py  integerarray.py  integerscalar.py  modelsignal.py  nonequallyspacedsignal.py  signal.py  signalitem.py  simpleboolean.py  simplestring.py  stringarray.py
src/marmo/report/: __init__.py  appendix.py  axis.py  column.py  font.py  image.py  lineplot.py  linestyle.py  numbercolumn.py  paragraph.py  plotline.py  plotsize.py  pointstyle.py  report.py  reportfragment.py  reportitem.py  reportitemcontainer.py  section.py  stringcolumn.py  table.py
src/sima/: __init__.py  header.py  modelcontent.py  package_info.py  packageinfo.py
src/sima/blueprints/: header.py  modelcontent.py  packageinfo.py
src/sima/command/: __init__.py  command.py  commandtask.py  compoundcommand.py  conditionruncommand.py  exportblueprintcommand.py  exportcommand.py  (+10 more)
src/simapy/: progress_handler.py  sima.py  sima_reader.py  sima_writer.py  sre.py
src/tests/: test_copy.py  test_create_workspace_with_task.py  test_hydro.py  test_metocean.py  test_signal_readers.py  test_versions_check.py  test_write_signals.py
(+4219 files in other folders)
